--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
   <h1>TIC-TAC-TOE</h1>
   <div class='inputs'>
-    <button type="text">Reset Game</button>
+    <p>Current Player Turn : <span class='playerTurn'>X</span></p>
+    <button type="text" class='reset'>Reset Game</button>
   </div>
   <table class=gameboard>
     <tbody>
